fix(build): fix build java 8.